@@ -1,21 +1,4 @@
-#
-# This file defines users passwords and roles for a HashUserRealm
-#
-# The format is
-#  <username>: <password>[,<rolename> ...]
-#
-# Passwords may be clear text, obfuscated or checksummed.  The class 
-# org.mortbay.util.Password should be used to generate obfuscated
-# passwords or password checksums
-#
-# If DIGEST Authentication is used, the password must be in a recoverable
-# format, either plain text or OBF:.
-#
-jetty: MD5:164c88b302622e17050af52c89945d44,user
-admin: admin,server-administrator,content-administrator,admin
-other: OBF:1xmk1w261u9r1w1c1xmq
-plain: plain,user
-user: password
-
-# This entry is for digest auth.  The credential is a MD5 hash of username:realmname:password
-digest: MD5:6e120743ad67abfbc385bc2bb754e297
+#Sun Jul 01 23:32:23 EST 2007
+admin=CRYPT\:Sug24raQkxtYQ,admin
+jetty=MD5\:164c88b302622e17050af52c89945d44,user
+user=CRYPT\:Sug24raQkxtYQ,user
