@@ -33,7 +33,6 @@ public class Security {
 
     logger = Logger.getLogger(this.getClass().getPackage().getName());
 
-    
     /*
 	connected = true;
 	return ;
